dynamodel_tests/tests/ui/fails/attribute/invalid_extra.stderr
error[E0425]: cannot find function `unknown` in this scope
 --> tests/ui/fails/attribute/invalid_extra.rs:4:21
  |
4 | #[dynamodel(extra = "unknown")]
  |                     ^^^^^^^^^ not found in this scope
